force-app/main/default/objects/Commission_Staging__c/Commission_Staging__c.object-meta.xml
<CustomObject>
    <description>A staging object for loading commissions from CSVs and creating Novidea Commissions records</description>
    <label>טעינת עמלה</label>
    <nameField>
        <displayFormat>Cs-{00000000}</displayFormat>
        <label>עמלה #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>טעינת עמלות</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>