force-app/main/default/objects/Commission_Staging__c/fields/Approved_by_carrier__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_carrier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>יש אישור מבטח</label>
    <type>Checkbox</type>
</CustomField>