force-app/main/default/objects/Commission_Staging__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מבטח</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>טעינת עמלות</relationshipLabel>
    <relationshipName>Commission</relationshipName>
    <type>Lookup</type>
</CustomField>