force-app/main/default/objects/Commission_Staging__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>תקבול</label>
    <referenceTo>Novidea_HPC__Collection_From_Carrier__c</referenceTo>
    <relationshipName>Commission</relationshipName>
    <type>Lookup</type>
</CustomField>