force-app/main/default/objects/Commission_Staging__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <label>טעינה - סכום עמלה</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>