force-app/main/default/objects/Commission_Staging__c/fields/Commission_Branch__c.field-meta.xml
<CustomField>
    <fullName>Commission_Branch__c</fullName>
    <label>טעינה - ענף</label>
    <length>50</length>
    <type>Text</type>
</CustomField>