force-app/main/default/objects/Commission_Staging__c/fields/Commission_Branch_Transformed__c.field-meta.xml
<CustomField>
    <fullName>Commission_Branch_Transformed__c</fullName>
    <formula>IF( RecordType.DeveloperName = &quot;MENORA&quot;, 

TEXT(VALUE(LEFT(Policy_Number__c ,4))),

Commission_Branch__c )</formula>
    <label>ענף - התאמה</label>
    <type>Text</type>
</CustomField>