force-app/main/default/objects/Commission_Staging__c/fields/Commission_Created_Month__c.field-meta.xml
<CustomField>
    <fullName>Commission_Created_Month__c</fullName>
    <formula>TEXT(MONTH( DATEVALUE(CreatedDate )))
+ &quot;-&quot; + TEXT(YEAR( DATEVALUE(CreatedDate )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>חודש טעינת עמלה</label>
    <type>Text</type>
</CustomField>