force-app/main/default/objects/Commission_Staging__c/fields/Commission_Currency__c.field-meta.xml
<CustomField>
    <fullName>Commission_Currency__c</fullName>
    <label>מטבע עמלה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Novidea_HPC__Currencies</valueSetName>
    </valueSet>
</CustomField>