force-app/main/default/objects/Commission_Staging__c/fields/Commission_Date__c.field-meta.xml
<CustomField>
    <fullName>Commission_Date__c</fullName>
    <label>תאריך עמלה</label>
    <type>Date</type>
</CustomField>