force-app/main/default/objects/Commission_Staging__c/fields/Commission_Description__c.field-meta.xml
<CustomField>
    <fullName>Commission_Description__c</fullName>
    <label>תאור עמלה</label>
    <length>255</length>
    <type>Text</type>
</CustomField>