force-app/main/default/objects/Commission_Staging__c/fields/Commission_id__c.field-meta.xml
<CustomField>
    <fullName>Commission_id__c</fullName>
    <formula>Commission__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission_id</label>
    <type>Text</type>
</CustomField>