force-app/main/default/objects/Commission_Staging__c/fields/Commission_Load_Error__c.field-meta.xml
<CustomField>
    <fullName>Commission_Load_Error__c</fullName>
    <inlineHelpText>מה הסיבה שבגללה לא נוצר תקבול</inlineHelpText>
    <label>שגיאה</label>
    <length>100</length>
    <type>Text</type>
</CustomField>