force-app/main/default/objects/Commission_Staging__c/fields/Currency_Name__c.field-meta.xml
<CustomField>
    <fullName>Currency_Name__c</fullName>
    <label>טעינה - מטבע</label>
    <length>50</length>
    <type>Text</type>
</CustomField>