force-app/main/default/objects/Commission_Staging__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>טעינה - שם מבוטח</label>
    <length>255</length>
    <type>Text</type>
</CustomField>