force-app/main/default/objects/Commission_Staging__c/fields/Load_Agent_Number__c.field-meta.xml
<CustomField>
    <fullName>Load_Agent_Number__c</fullName>
    <label>טעינה - מספר סוכן</label>
    <length>50</length>
    <type>Text</type>
</CustomField>