force-app/main/default/objects/Commission_Staging__c/fields/Load_Branch__c.field-meta.xml
<CustomField>
    <fullName>Load_Branch__c</fullName>
    <label>טעינה - סניף</label>
    <length>30</length>
    <type>Text</type>
</CustomField>