force-app/main/default/objects/Commission_Staging__c/fields/Load_Commission_Amount_1__c.field-meta.xml
<CustomField>
    <fullName>Load_Commission_Amount_1__c</fullName>
    <label>טעינה - סכום עמלה 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>