force-app/main/default/objects/Commission_Staging__c/fields/Load_Commission_Date__c.field-meta.xml
<CustomField>
    <fullName>Load_Commission_Date__c</fullName>
    <label>טעינה - תאריך עמלה</label>
    <type>Date</type>
</CustomField>