force-app/main/default/objects/Commission_Staging__c/fields/Load_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Load_Transaction_Type__c</fullName>
    <label>טעינה - סוג טרנזקציה</label>
    <length>100</length>
    <type>Text</type>
</CustomField>