force-app/main/default/objects/Commission_Staging__c/fields/Load_Year__c.field-meta.xml
<CustomField>
    <fullName>Load_Year__c</fullName>
    <label>טעינה - שנת חיתום</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>