force-app/main/default/objects/Commission_Staging__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>פוליסה</label>
    <referenceTo>Novidea_HPC__Policy__c</referenceTo>
    <relationshipName>Commssion</relationshipName>
    <type>Lookup</type>
</CustomField>