force-app/main/default/objects/Commission_Staging__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <label>טעינה - מספר פוליסה</label>
    <length>255</length>
    <type>Text</type>
</CustomField>