force-app/main/default/objects/Commission_Staging__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>הערה</label>
    <type>TextArea</type>
</CustomField>