force-app/main/default/objects/Commission_Staging__c/fields/trigger_find_policy__c.field-meta.xml
<CustomField>
    <fullName>trigger_find_policy__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>לסמן בכדי להפעיל את מנגנון יצירת תקבול</inlineHelpText>
    <label>יצירת תקבול</label>
    <type>Checkbox</type>
</CustomField>