force-app/main/default/objects/Commission_Staging__c/recordTypes/AIG.recordType-meta.xml
<RecordType>
    <fullName>AIG</fullName>
    <active>true</active>
    <label>AIG</label>
</RecordType>