force-app/main/default/objects/Commission_Staging__c/recordTypes/ARDONAGH.recordType-meta.xml
<RecordType>
    <fullName>ARDONAGH</fullName>
    <active>true</active>
    <label>ARDONAGH</label>
</RecordType>