force-app/main/default/objects/Commission_Staging__c/recordTypes/AYALON.recordType-meta.xml
<RecordType>
    <fullName>AYALON</fullName>
    <active>true</active>
    <label>AYALON</label>
</RecordType>