force-app/main/default/objects/Commission_Staging__c/recordTypes/CFC.recordType-meta.xml
<RecordType>
    <fullName>CFC</fullName>
    <active>true</active>
    <label>CFC</label>
</RecordType>