force-app/main/default/objects/Commission_Staging__c/recordTypes/CLAL.recordType-meta.xml
<RecordType>
    <fullName>CLAL</fullName>
    <active>true</active>
    <label>CLAL</label>
</RecordType>