force-app/main/default/objects/Commission_Staging__c/recordTypes/GUEST.recordType-meta.xml
<RecordType>
    <fullName>GUEST</fullName>
    <active>true</active>
    <label>GUEST</label>
</RecordType>