force-app/main/default/objects/Commission_Staging__c/recordTypes/HAHSHARA.recordType-meta.xml
<RecordType>
    <fullName>HAHSHARA</fullName>
    <active>true</active>
    <label>HAHSHARA</label>
</RecordType>