force-app/main/default/objects/Commission_Staging__c/recordTypes/HAREL.recordType-meta.xml
<RecordType>
    <fullName>HAREL</fullName>
    <active>true</active>
    <label>HAREL</label>
</RecordType>