force-app/main/default/objects/Commission_Staging__c/recordTypes/HIBL.recordType-meta.xml
<RecordType>
    <fullName>HIBL</fullName>
    <active>true</active>
    <label>HIBL</label>
</RecordType>