force-app/main/default/objects/Commission_Staging__c/recordTypes/LUX.recordType-meta.xml
<RecordType>
    <fullName>LUX</fullName>
    <active>true</active>
    <label>LUX</label>
</RecordType>