force-app/main/default/objects/Commission_Staging__c/recordTypes/MENORA.recordType-meta.xml
<RecordType>
    <fullName>MENORA</fullName>
    <active>true</active>
    <label>MENORA</label>
</RecordType>