force-app/main/default/objects/Commission_Staging__c/recordTypes/MIGDAL.recordType-meta.xml
<RecordType>
    <fullName>MIGDAL</fullName>
    <active>true</active>
    <label>MIGDAL</label>
</RecordType>