force-app/main/default/objects/Commission_Staging__c/recordTypes/PHOENIX_ILS.recordType-meta.xml
<RecordType>
    <fullName>PHOENIX_ILS</fullName>
    <active>true</active>
    <label>PHOENIX_ILS</label>
</RecordType>