force-app/main/default/objects/Commission_Staging__c/recordTypes/PHOENIX_USD.recordType-meta.xml
<RecordType>
    <fullName>PHOENIX_USD</fullName>
    <active>true</active>
    <label>PHOENIX_USD</label>
</RecordType>