force-app/main/default/objects/Commission_Staging__c/recordTypes/SELA.recordType-meta.xml
<RecordType>
    <fullName>SELA</fullName>
    <active>true</active>
    <label>SELA</label>
</RecordType>