force-app/main/default/objects/Commission_Staging__c/recordTypes/WS.recordType-meta.xml
<RecordType>
    <fullName>WS</fullName>
    <active>true</active>
    <label>WS</label>
</RecordType>