force-app/main/default/objects/Commission_Staging__c/listViews/AIG.listView-meta.xml
<ListView>
    <fullName>AIG</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Policy_Number__c</columns>
    <columns>Policy_Number_Transformed__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Commission_Branch__c</columns>
    <columns>Policy__c</columns>
    <columns>Commission_Load_Error__c</columns>
    <columns>trigger_find_policy__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Commission_id__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Commission_Staging__c.AIG</value>
    </filters>
    <label>AIG שגויים</label>
</ListView>