force-app/main/default/objects/Commission_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Policy_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Policy__c</columns>
    <columns>Commission__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>